pc/parser.c
#include <assert.h>
#include <ctype.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <inttypes.h>
#include "nopl.h"
#include "newopl.h"
#include "nopl_obj.h"
#include "parser.h"

FILE *ptfp;

// Tokenise OPL
// one argument: an OPL file

// reads next composite line into buffer
char cline[MAX_NOPL_LINE];
int cline_i = 0;
int if_level = 0;
int unique_level = 0;

#define SAVE_I     1
#define NO_SAVE_I  0

#define INSERT_TYPES        1
#define DO_NOT_INSERT_TYPES 0

// Information about the procedure being translated
char          procedure_name[NOBJ_VARNAME_MAXLEN+1];
NOBJ_VARTYPE  procedure_type;
int           procedure_has_return = 0;

#define I_WHERE     &(cline[cline_i])
#define IDX_WHERE   &(cline[idx])

#define NOT_TRAPPED 0
#define TRAPPED     1

#define STORE_VAR_INFO      1
#define DONT_STORE_VAR_INFO 0

////////////////////////////////////////////////////////////////////////////////
//
// Index for QCode generation
//
// Set up by header building to point at position where qcode should go

int qcode_idx         = 0;
int pass_number       = 0;
int qcode_header_len  = 0;     // Actually length of ob3 file, header and qcodes
int qcode_start_idx   = 0;      // Where the QCode starts
int qcode_len         = 0;     // Length of QCode
int size_of_qcode_idx = 0;

////////////////////////////////////////////////////////////////////////////////


char *exp_buffer_id_str[] =
  {
    "EXP_BUFF_ID_???",
    "EXP_BUFF_ID_TKN",
    "EXP_BUFF_ID_NONE",
    "EXP_BUFF_ID_SUB_START",
    "EXP_BUFF_ID_SUB_END",
    "EXP_BUFF_ID_VARIABLE",
    "EXP_BUFF_ID_INTEGER",
    "EXP_BUFF_ID_FLT",
    "EXP_BUFF_ID_STR",
    "EXP_BUFF_ID_FUNCTION",
    "EXP_BUFF_ID_OPERATOR",
    "EXP_BUFF_ID_OPERATOR_UNARY",
    "EXP_BUFF_ID_AUTOCON",
    "EXP_BUFF_ID_COMMAND",
    "EXP_BUFF_ID_PROC_CALL",
    "EXP_BUFF_ID_ASSIGN",
    "EXP_BUFF_ID_CONDITIONAL",
    "EXP_BUFF_ID_RETURN",
    "EXP_BUFF_ID_VAR_ADDR_NAME",
    "EXP_BUFF_ID_PRINT",
    "EXP_BUFF_ID_PRINT_SPACE",
    "EXP_BUFF_ID_PRINT_NEWLINE",
    "EXP_BUFF_ID_LPRINT",
    "EXP_BUFF_ID_LPRINT_SPACE",
    "EXP_BUFF_ID_LPRINT_NEWLINE",
    "EXP_BUFF_ID_IF",
    "EXP_BUFF_ID_ENDIF",
    "EXP_BUFF_ID_ELSE",
    "EXP_BUFF_ID_ELSEIF",
    "EXP_BUFF_ID_DO",
    "EXP_BUFF_ID_UNTIL",
    "EXP_BUFF_ID_WHILE",
    "EXP_BUFF_ID_ENDWH",
    "EXP_BUFF_ID_GOTO",
    "EXP_BUFF_ID_TRAP",
    "EXP_BUFF_ID_LABEL",
    "EXP_BUFF_ID_CONTINUE",
    "EXP_BUFF_ID_BREAK",
    "EXP_BUFF_ID_META",
    "EXP_BUFF_ID_BRAENDIF",
    "EXP_BUFF_ID_FIELDVAR",
    "EXP_BUFF_ID_LOGICALFILE",
    "EXP_BUFF_ID_ONERR",
    "EXP_BUFF_ID_INPUT",
    "EXP_BUFF_ID_MAX",
  };

#define NUM_BUFF_ID (sizeof(exp_buffer_id_str) / sizeof(char *))

////////////////////////////////////////////////////////////////////////////////

NOBJ_VAR_INFO var_info[MAX_VAR_INFO];
int num_var_info = 0;

////////////////////////////////////////////////////////////////////////////////

struct _FN_INFO
{
  char *name;
  int command;         // 1 if command, 0 if function
  int trappable;       // 1 if can be used with TRAP
  char argparse;       // How to parse the args   O: scan_onoff
                       //                         V: varname list
                       //                         otherwise: scan_expression()
  char *argtypes;
                       //  i: integer (value)
                       //  f: float (value)
                       //  s: string (value) 
  char *resulttype;
  uint8_t qcode;
  int     force_write;
}
  fn_info[] =
  {
    { "ABS",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "ACOS",     0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "ADDR",     0,  0, 'V',  "V",         "i", 0x00, 0 },
    { "APPEND",   1,  1, ' ',  "",          "v", 0x00, 0 },
    { "ASC",      0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "ASIN",     0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "AT",       1,  0, ' ',  "ii",        "v", 0x4C, 0 },
    { "ATAN",     0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "BACK",     1,  1, ' ',  "",          "v", 0x00, 0 },
    { "BEEP",     1,  0, ' ',  "ii",        "v", 0x00, 0 },
    //{ "BREAK",    1,  0, ' ',  "",          "v", 0x00, 0 },
    { "CHR$",     0,  0, ' ',  "i",         "s", 0x00, 0 },
    { "CLOCK",    0,  0, ' ',  "i",         "i", 0x00, 0 },
    { "CLOSE",    1,  1, ' ',  "",          "v", 0x00, 0 },
    { "CLS",      1,  0, ' ',  "",          "v", 0x00, 0 },
    //    { "CONTINUE", 1,  0, ' ',  "",          "v", 0x00, 0 },  // Conditional
    { "COPYW",    1,  1, ' ',  "ss",        "v", 0x00, 0 },
    { "COPY",     1,  1, ' ',  "ss",        "v", 0x00, 0 },
    { "COS",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "COUNT",    0,  0, ' ',  "",          "i", 0x00, 0 },
    //{ "CREATE",   1,  1, ' ',  "ii",        "v", 0x00, 0 },  // file format
    { "CURSOR",   1,  0, 'O',  "i",         "v", 0x00, 0 },
    { "DATIM$",   0,  0, ' ',  "",          "s", 0x00, 0 },
    { "DAYNAME$", 0,  0, ' ',  "i",         "s", 0x00, 0 },
    { "DAYS",     0,  0, ' ',  "iii",       "i", 0x00, 0 },
    { "DAY",      0,  0, ' ',  "",          "i", 0x00, 0 },
    { "DEG",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "DELETEW",  1,  1, ' ',  "",          "v", 0x00, 0 },
    { "DELETE",   1,  1, ' ',  "",          "v", 0x00, 0 },
    { "DIRW$",    0,  0, ' ',  "s",         "s", 0x00, 0 },
    { "DIR$",     0,  0, ' ',  "s",         "s", 0x00, 0 },
    { "DISP",     0,  0, ' ',  "i$",        "i", 0x00, 0 },
    { "DOW",      0,  0, ' ',  "iii",       "i", 0x00, 0 },
    { "EDIT",     1,  1, ' ',  "s",         "v", 0x00, 1 },
    //  { "ENDIF",    1,  0, ' ',  "",          "v", 0x00, 0 },
    { "EOF",      0,  0, ' ',  "",          "i", 0x00, 0 },
    { "ERASE",    1,  1, ' ',  "",          "v", 0x00, 0 },
    { "ERR$",     0,  0, ' ',  "i",         "s", 0x00, 0 },
    { "ERR",      0,  0, ' ',  "",          "i", 0x00, 0 },
    { "ESCAPE",   1,  0, 'O',  "i",         "v", 0x00, 0 },
    { "EXIST",    0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "EXP",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "FINDW",    0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "FIND",     0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "FIRST",    1,  1, ' ',  "",          "v", 0x00, 0 },
    { "FIX$",     0,  0, ' ',  "fii",       "s", 0x00, 0 },
    { "FLT",      0,  0, ' ',  "i",         "f", 0x00, 0 },
    { "FREE",     0,  0, ' ',  "",          "i", 0x00, 0 },
    { "GEN$",     0,  0, ' ',  "fi",        "s", 0x00, 0 },
    { "GET$",     0,  0, ' ',  "",          "s", 0x00, 0 },
    { "GET",      0,  0, ' ',  "",          "i", 0x00, 0 },
    { "HEX$",     0,  0, ' ',  "i",         "s", 0x00, 0 },
    { "HOUR",     0,  0, ' ',  "",          "i", 0x00, 0 },
    { "IABS",     0,  0, ' ',  "i",         "i", 0x00, 0 },
    //{ "INPUT",    1,  1, ' ',  "i",         "i", 0x00, 0 },
    { "INTF",     0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "INT",      0,  0, ' ',  "f",         "i", 0x00, 0 },
    //    { "IF",       1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "KEY$",     0,  0, ' ',  "",          "s", 0x00, 0 },
    { "KEY",      0,  0, ' ',  "",          "i", 0x00, 0 },
    { "KSTAT",    1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "LAST",     1,  1, ' ',  "",          "v", 0x00, 0 },
    { "LEFT$",    0,  0, ' ',  "si",        "s", 0x00, 0 },
    { "LEN",      0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "LN",       0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "LOC",      0,  0, ' ',  "ss",        "i", 0x00, 0 },
    { "LOG",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "LOWER$",   0,  0, ' ',  "s",         "s", 0x00, 0 },
    //{ "LPRINT",   1,  0, ' ',  "i",         "v", 0x00, 0 },    // As print
    { "MAX",      0,  0, ' ',  "ii",        "f", 0x00, 0 },
    { "MEAN",     0,  0, ' ',  "ii",        "f", 0x00, 0 },    // Multiple forms
    { "MENUN",    0,  0, ' ',  "is",        "i", 0x00, 0 },    // Multiple forms
    { "MENU",     0,  0, ' ',  "s",         "i", 0x00, 0 },
    { "MID$",     0,  0, ' ',  "sii",       "s", 0x00, 0 },
    { "MINUTE",   0,  0, ' ',  "",          "i", 0x00, 0 },
    { "MIN",      0,  0, ' ',  "ii",        "f", 0x00, 0 },    // Multiple forms
    { "MONTH$",   0,  0, ' ',  "i",         "s", 0x00, 0 },    
    { "MONTH",    0,  0, ' ',  "",          "i", 0x00, 0 },
    { "NEXT",     0,  1, ' ',  "",          "v", 0x00, 0 },
    { "NUM$",     0,  0, ' ',  "fi",        "s", 0x00, 0 },
    // { "NOT",      0,  0, ' ',  "i",         "i", 0x00, 0 },
    { "OFFX",     1,  0, ' ',  "i",         "v", 0x00, 0 },    // OFF or OFF x%
    { "OFF",      1,  0, ' ',  "",          "v", 0x00, 0 },    // OFF or OFF x%
    //{ "OPEN",     1,  1, ' ',  "ii",        "v", 0x00, 0 },    // File format
    //    { "ONERR",    1,  0, ' ',  "",          "v", 0x00, 0 },    
    { "PAUSE",    1,  0, ' ',  "i" ,        "v", 0x00, 0 },
    { "PEEKB",    0,  0, ' ',  "i",         "i", 0x00, 0 },
    { "PEEKW",    0,  0, ' ',  "i",         "i", 0x00, 0 },
    { "PI",       0,  0, ' ',  "",          "f", 0x00, 0 },
    { "POKEB",    1,  0, ' ',  "ii",        "v", 0x00, 0 },
    { "POKEW",    1,  0, ' ',  "ii",        "v", 0x00, 0 },
    { "POSITION", 1,  1, ' ',  "i",         "v", 0x00, 0 },
    { "POS",      0,  0, ' ',  "",          "i", 0x00, 0 },
    //{ "PRINT",    1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "RAD",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "RAISE",    1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "RANDOMIZE",1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "RECSIZE",  0,  0, ' ',  "",          "i", 0x00, 0 },
    { "REM",      1,  0, ' ',  "",          "v", 0x00, 0 },
    { "RENAME",   1,  1, ' ',  "ss",        "v", 0x00, 0 },
    { "REPT$",    0,  0, ' ',  "si",        "s", 0x00, 0 },
    { "RETURN",   1,  0, ' ',  "i",         "v", 0x00, 0 },
    { "RIGHT$",   0,  0, ' ',  "si",        "s", 0x00, 0 },
    { "RND",      0,  0, ' ',  "",          "f", 0x00, 0 },
    { "SCI$",     0,  0, ' ',  "fii",       "s", 0x00, 0 },
    { "SECOND",   0,  0, ' ',  "",          "i", 0x00, 0 },
    { "SIN",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "SPACE",    0,  0, ' ',  "",          "f", 0x00, 0 },
    { "SQR",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    { "STD",      0,  0, ' ',  "ii",        "f", 0x00, 0 },  // Multiple forms
    { "STOP",     1,  0, ' ',  "",          "v", 0x00, 0 },
    { "SUM",      0,  0, ' ',  "ii",        "f", 0x00, 0 },  // Multiple forms
    { "TAN",      0,  0, ' ',  "f",         "f", 0x00, 0 },
    //{ "TRAP",     1,  0, ' ',  "",          "v", 0x00, 0 },  // Prefix, not command?
    { "UDG",      1,  0, ' ',  "iiiiiiiii", "v", 0x00, 0 },
    { "UPDATE",   1,  1, ' ',  "",          "v", 0x00, 0 },
    { "UPPER$",   0,  0, ' ',  "s",         "s", 0x00, 0 },
    { "USE",      1,  1, ' ',  "",          "v", 0x00, 0 },   // Need A,B,C,D type
    { "USR$",     0,  0, ' ',  "ii",        "s", 0x00, 0 },
    { "USR",      0,  0, ' ',  "ii",        "i", 0x00, 0 },
    { "VAL",      0,  0, ' ',  "s",         "f", 0x00, 0 },
    { "VAR",      0,  0, ' ',  "ii",        "f", 0x00, 0 },   // Multiple forms
    { "VIEW",     0,  0, ' ',  "is",        "i", 0x00, 0 },   
    { "WEEK",     0,  0, ' ',  "iii",       "i", 0x00, 0 },
    { "YEAR",     0,  0, ' ',  "",          "i", 0x00, 0 },
  };


#define NUM_FUNCTIONS (sizeof(fn_info)/sizeof(struct _FN_INFO))

int token_is_function(char *token, char **tokstr)
{
  dbprintf( "\n%s:", __FUNCTION__);
  
  for(int i=0; i<NUM_FUNCTIONS; i++)
    {
      if( (strcmp(token, fn_info[i].name) == 0) )
	{
	  *tokstr = &(fn_info[i].name[0]);
	  
	  dbprintf("%s is function", token);
	  return(1);
	}
    }
  dbprintf( "\n%s:%s is not function", __FUNCTION__, token);
  return(0);
  
}

//------------------------------------------------------------------------------
// Return the function return value type

NOBJ_VARTYPE function_return_type(char *fname)
{
  char *rtype;
  char rt;
  NOBJ_VARTYPE vt;
  
  for(int i=0; i<NUM_FUNCTIONS; i++)
    {
      if( strcmp(fname, fn_info[i].name) == 0 )
	{
	  rtype = fn_info[i].resulttype;
	  rt = *rtype;
	  
	  dbprintf( "\n%s: '%s' =>%c", __FUNCTION__, fname, rt);

	  vt = char_to_type(rt);
	  dbprintf( "\n%s: '%s' =>%d", __FUNCTION__, fname, vt);
	  return(vt);
	  
	}
    }
  
  return(NOBJ_VARTYPE_UNKNOWN);
}

//------------------------------------------------------------------------------

int function_access_force_write(char * fname)
{
  for(int i=0; i<NUM_FUNCTIONS; i++)
    {
      if( strcmp(fname, fn_info[i].name) == 0 )
	{
	  return(fn_info[i].force_write);
	}
    }

  return(0);
}

//------------------------------------------------------------------------------
//
// Return the function return value type
//

int function_num_args(char *fname)
{

  for(int i=0; i<NUM_FUNCTIONS; i++)
    {
      if( strcmp(fname, fn_info[i].name) == 0 )
	{
	  return(strlen(fn_info[i].argtypes));
	}
    }
  return(0);
}

// Returns the type of an argument (without ref/value information)

NOBJ_VARTYPE function_arg_type_n(char *fname, int n)
{
  char *atypes;
  
  for(int i=0; i<NUM_FUNCTIONS; i++)
    {
      if( strcmp(fname, fn_info[i].name) == 0 )
	{
	  atypes = fn_info[i].argtypes;
	  
	  char type = *(atypes+n);
	  
	  return(char_to_type(type));
	}
    }
  
  return(NOBJ_VARTYPE_UNKNOWN);
}

////////////////////////////////////////////////////////////////////////////////
//
// Operator info
//
// Some operators have a mutable type, they are polymorphic. Some are not.
// The possible types for operators are listed here
//


OP_INFO  op_info[] =
  {
    // Array dereference internal operator (not used)
    { "@",    1, 9, NOBJ_VARTYPE_UNKNOWN, 0, "",     0,   MUTABLE_TYPE, 1, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR} },
    { "=",    1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "<>",   1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { ":=",   0, 1, NOBJ_VARTYPE_UNKNOWN, 0, "",     0,   MUTABLE_TYPE, 1, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "+",    1, 3, NOBJ_VARTYPE_UNKNOWN, 0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "-",    1, 3, NOBJ_VARTYPE_UNKNOWN, 1, "UMIN", 1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "**",   1, 5, NOBJ_VARTYPE_UNKNOWN, 0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },
    { "*",    1, 5, NOBJ_VARTYPE_UNKNOWN, 0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },
    { "/",    1, 5, NOBJ_VARTYPE_UNKNOWN, 0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },
    { ">=",   1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "<=",   1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { ">",    1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },
    { "<",    1, 2, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_STR, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_STRARY} },

    // (Handle bitwise on integer, logical on floats somewhere)
    { "AND",  1, 2, NOBJ_VARTYPE_INT,     0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },
    { "OR",   1, 2, NOBJ_VARTYPE_INT,     0, "",     1,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },
    { "NOT",  1, 1, NOBJ_VARTYPE_INT,     1, "UNOT", 0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_INT, NOBJ_VARTYPE_INTARY, NOBJ_VARTYPE_FLTARY, NOBJ_VARTYPE_INTARY} },

    // LZ only
    { "+%",   1, 5, NOBJ_VARTYPE_UNKNOWN, 0, "",     1, IMMUTABLE_TYPE, 0, {NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT} },
    { "-%",   1, 5, NOBJ_VARTYPE_UNKNOWN, 0, "",     1, IMMUTABLE_TYPE, 0, {NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT} },


    // Unary versions
    { "UMIN", 1, 6, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT} },
    { "UNOT", 1, 1, NOBJ_VARTYPE_INT,     0, "",     0,   MUTABLE_TYPE, 0, {NOBJ_VARTYPE_INT, NOBJ_VARTYPE_FLT, NOBJ_VARTYPE_FLT} },
  };


#define NUM_OPERATORS_VAL (sizeof(op_info)/sizeof(struct _OP_INFO))

int num_operators(void)
{
  return(NUM_OPERATORS_VAL);
}

////////////////////////////////////////////////////////////////////////////////
//
// Keyword that aren't in the tables above as they are handled differently,
// but still can't be used as variables etc.
//
////////////////////////////////////////////////////////////////////////////////


typedef struct _OTHER_KEYWORD_INFO
{
  char *name;
} OTHER_KEYWORD_INFO;

OTHER_KEYWORD_INFO other_keywords[] =
  {
    {"IF"},
    {"ENDIF"},
    {"ELSE"},
    {"ELSEIF"},
    {"DO"},
    {"UNTIL"},
    {"WHILE"},
    {"ENDWH"}
  };

#define NUM_OTHER_KEYWORDS (sizeof(other_keywords)/sizeof(struct _OTHER_KEYWORD_INFO))

//------------------------------------------------------------------------------

void make_var_type_array(NOBJ_VARTYPE *vt)
{
  switch(*vt)
    {
    case NOBJ_VARTYPE_INT:
      *vt = NOBJ_VARTYPE_INTARY;
      return;
      break;

    case NOBJ_VARTYPE_FLT:
      *vt = NOBJ_VARTYPE_FLTARY;
      return;
      break;

    case NOBJ_VARTYPE_STR:
      *vt = NOBJ_VARTYPE_STRARY;
      return;
      break;
    }

  // A type that cannot be turned into an array
  internal_error("Type %s canot be turned into an array", type_to_str(*vt));
  
}

//------------------------------------------------------------------------------

int var_type_is_array(NOBJ_VARTYPE vt)
{
  switch(vt)
    {
    case NOBJ_VARTYPE_INTARY:
    case NOBJ_VARTYPE_FLTARY:
    case NOBJ_VARTYPE_STRARY:
      return(1);
      break;
    }
  
  return(0);  
}

//------------------------------------------------------------------------------

int token_is_other_keyword(char *token)
{
  dbprintf( "");
  
  for(int i=0; i<NUM_OTHER_KEYWORDS; i++)
    {
      if( (strcmp(token, other_keywords[i].name) == 0) )
	{
	  dbprintf("'%s' is other keyword", token);
	  return(1);
	}
    }
  dbprintf( "'%s' is not other keyword", token);
  return(0);
  
}

char unk[30];

char *var_class_to_str(NOPL_VAR_CLASS vc)
{
  switch(vc)
    {
    case NOPL_VAR_CLASS_UNKNOWN:
      return("Unknown");
      break;

    case NOPL_VAR_CLASS_LOCAL:
      return("Local");
      break;

    case NOPL_VAR_CLASS_GLOBAL:
      return("Global");
      break;

    case NOPL_VAR_CLASS_EXTERNAL:
      return("External");
      break;
 
    case NOPL_VAR_CLASS_PARAMETER:
      return("Parameter");
      break;

    case NOPL_VAR_CLASS_CALC_MEMORY:
      return("Calc Memory");
      break;

    case NOPL_VAR_CLASS_CREATE:
      return("Create");
      break;
      
    case NOPL_VAR_CLASS_OPEN:
      return("Open");
      break;
      
    case NOPL_VAR_CLASS_FIELDVAR:
      return("Field Var");
      break;
      
    }


  sprintf(unk, "???? (%d)", vc);

  return(unk);
}


////////////////////////////////////////////////////////////////////////////////

void fprint_var_info(FILE *fp, NOBJ_VAR_INFO *vi)
{
  
  fprintf(fp, "VAR: '%18s' %10s %-14s %10s max_str:%3d max_ary:%3d num_ind:%3d offset:%04X",
	  vi->name,
	  var_class_to_str(vi->class),
	  type_to_str(vi->type),
	  (vi->is_ref)?    "REFRNCE":"DECLARE",
	  vi->max_string,
	  vi->max_array,
	  vi->num_indices,
	  vi->offset
	  );
}

void print_var_info(NOBJ_VAR_INFO *vi)
{
  fprintf(ofp, "\n");
  fprint_var_info(ofp, vi);
}

void init_var_info(NOBJ_VAR_INFO *vi)
{
  vi->name[0]     = '\0';
  vi->class       = NOPL_VAR_CLASS_UNKNOWN;
#if 0
  vi->is_global   = 0;
  vi->is_ext      = 0;
#endif
  vi->is_ref      = 0;
#if 0
  vi->is_integer  = 0;
  vi->is_float    = 0;
  vi->is_string   = 0;
  vi->is_array    = 0;
#endif
  vi->type = NOBJ_VARTYPE_UNKNOWN;
  vi->max_string  = 0;
  vi->max_array   = 0;
  vi->num_indices = 0;
}

void to_upper_str(char *str)
{
  while(*str != '\0')
    {
      *str = toupper(*str);
      str++;
    }
}

NOBJ_VAR_INFO *find_var_info(char *name, NOBJ_VARTYPE type)
{
  to_upper_str(name);
  
  for(int i=0; i<num_var_info; i++)
    {
      dbprintf("'%s' '%s'", var_info[i].name, name);
      // Must be an exact match, case insensitive
      // type must match as well.

      if( type != var_info[i].type )
	{
	  continue;
	}
      
      if( strlen(name) != strlen(var_info[i].name) )
	{
	  continue;
	}
      
      if( strn_match(name, var_info[i].name, strlen(var_info[i].name)) )
	{
	  // Got a match
	  return(&(var_info[i]));
	}
    }
  
  // Not found
  dump_vars(ofp);
  
  dbprintf("******");
  dbprintf("\nCould not find var '%s'", name);
  dbprintf("******");
  return(NULL);
}

//------------------------------------------------------------------------------
//
// Update the info about a variable
//
// Only update the array details
//

void update_var_info(char *name, NOBJ_VAR_INFO *vi)
{
  to_upper_str(name);
  
  for(int i=0; i<num_var_info; i++)
    {
      // Must be an exact match, case insensitive
      // type must match as well.
